# shop

./: pyproject.toml
apps/products/: models.py  serializers.py  urls.py  views.py
apps/products/migrations/: 0001_initial.py  0002_product_top.py
apps/users/: managers.py  models.py  utils.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_managers.py
config/: settings.py  urls.py
static/css/: styles.css
static/products/: script.js
templates/home/: index.html
