[tool.poetry]
name = "shop"
version = "0.1.0"
description = ""
authors = ["artic <artiom.carter@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
djangorestframework = "^3.15.1"
mysql-connector-python = "^8.4.0"
mysqlclient = "^2.2.4"
django-compressor = "^4.4"
pillow = "^10.3.0"
django-cors-headers = "^4.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
